--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <style>
     /* Exemple de styles personnalisés supplémentaires */
     .bg-hero {
-      background: url('images/forêt.jpeg') center/cover no-repeat;
+      background: url('images/forêt.png') center/cover no-repeat;
     }
 
     .bg-genese {
