--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
       </div>
 
       <div class="flex justify-center">
-        <form action="mailto:contact@kanopix.com" method="post" enctype="text/plain" class="bg-gradient-to-b from-white to-gray-100 border border-gray-200
+        <form action="mailto:xxxxx@kanopix.com" method="post" enctype="text/plain" class="bg-gradient-to-b from-white to-gray-100 border border-gray-200
                  bg-opacity-90 backdrop-blur-sm p-10 rounded-xl shadow-2xl max-w-2xl w-full">
           <!-- Nom & Email -->
           <div class="grid md:grid-cols-2 gap-6">
